[package]
name = "usrbio"
version = "0.1.22"
edition = "2021"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
homepage = "https://github.com/SF-Zhou/usrbio"
repository = "https://github.com/SF-Zhou/usrbio"
description = "Rust bindings for the [3FS USRBIO API](https://github.com/deepseek-ai/3FS/blob/main/src/lib/api/UsrbIo.md)."
license = "MIT OR Apache-2.0"

[features]
bin = ["dep:clap", "dep:crc32c", "dep:hdrhistogram", "dep:human-units", "dep:rand", "dep:tokio", "dep:walkdir"]

[build-dependencies]
bindgen = "0.72"

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
crc32c = { version = "0.6", optional = true }
hdrhistogram = { version = "7.5", optional = true }
human-units = { version = "0.5", optional = true }
rand = { version = "0.9", optional = true }
tokio = { version = "1.47", features = ["full"], optional = true }
walkdir = { version = "2.5", optional = true }

[[bin]]
name = "usrbio"
path = "src/bin/usrbio.rs"
required-features = ["bin"]
